[gd_scene load_steps=9 format=2]

[ext_resource path="res://Pong Mania/Scenes/Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pong Mania/Scripts/StandardGame.gd" type="Script" id=2]
[ext_resource path="res://Pong Mania/Scenes/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Pong Mania/Scenes/EnemyPaddle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pong Mania/Scenes/LowerWall.tscn" type="PackedScene" id=5]
[ext_resource path="res://Pong Mania/Scenes/UpperWall.tscn" type="PackedScene" id=6]
[ext_resource path="res://Pong Mania/Scenes/EnemyScore.tscn" type="PackedScene" id=7]
[ext_resource path="res://Pong Mania/Scenes/PlayerScore.tscn" type="PackedScene" id=8]

[node name="StandardGame" type="Node"]
script = ExtResource( 2 )

[node name="Paddle" parent="." instance=ExtResource( 1 )]

[node name="Ball" parent="." instance=ExtResource( 3 )]

[node name="UpperWall" parent="." instance=ExtResource( 6 )]

[node name="LowerWall" parent="." instance=ExtResource( 5 )]

[node name="EnemyPaddle" parent="." instance=ExtResource( 4 )]

[node name="PlayerScore" parent="." instance=ExtResource( 8 )]

[node name="EnemyScore" parent="." instance=ExtResource( 7 )]
